メタタグ等の追加・変更

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <title>Typing Game</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="https://raw.githubusercontent.com/swawa-yu/icons/main/mel_icon.ico" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+
+  <meta name="description" content="拡張性の高いタイピングゲームです（予定）" />
+  <meta name="keywords" content="typing,タイピングゲーム,Dvorak,Dvorak配列,DvorakJP" />
+  <meta name="author" content="swawa_yu" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@swawa_yu" />
+  <meta property="og:url" content="https://swawa-yu.github.io/typing-game/" />
+  <meta property="og:title" content="Typing Game" />
+  <meta property="og:description" content="拡張性の高いタイピングゲームです（予定）" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
